--- a/Week 6/Day 1/monkeyface.html
+++ b/Week 6/Day 1/monkeyface.html
@@ -1,5 +1,19 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="monkeyface.css">
+</head>
 <body>
-    <div class="emoji closed active">🙈</div>
-    <div class="emoji open">🙉</div>
+    <div class="container">
+        <div class="emoji_closed_active">🙈</div>
+        <div class="emoji_open">🙉</div>
+    </div>
+
+    <script src="./script.js"> </script>
 </body>
+</html>
+
